[package]
authors = ["Luna <git@lunaa.dev>"]
edition = "2018"
name = "import-ynab-lib"
version = "0.1.0"

[dependencies]
anyhow = "1"
pretty_env_logger = ">=0.3"
restson = "0.7"
oauth2 = { version = "3", features = ["reqwest-010"], default-features = false }
serde_json = "*"
structopt = "*"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
csv = "1.1"
zip = "0.5.2"

[dependencies.serde]
features = ["derive"]
version = ">=1.0"
