[package]
authors = ["Luna <git@lunaa.dev>"]
edition = "2018"
name = "import-ynab-lib"
version = "0.1.1"

[dependencies]
anyhow = "1"
pretty_env_logger = ">=0.4.0"
restson = "1.3"
oauth2 = "4"
serde_json = "*"
structopt = "*"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking"] }
csv = "1.1"
zip = "2.0.0"

[dependencies.serde]
features = ["derive"]
version = ">=1.0.146"
